Refactor: Config system refactor
[ci skip]